Add few OpenApi annotation doc
